third_party/move/move-compiler-v2/tests/checking/specs/update_field_err.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/checking/specs/update_field_err.move:8:16
  │
8 │         r.x = 1;
  │                ^

error: field `z` not declared in struct `R`
   ┌─ tests/checking/specs/update_field_err.move:16:9
   │
16 │         update_field(r, z, 1)
   │         ^^^^^^^^^^^^^^^^^^^^^

error: expected `u64` but found a value of type `bool`
   ┌─ tests/checking/specs/update_field_err.move:20:28
   │
20 │         update_field(r, x, true)
   │                            ^^^^
